fixed: bug effecting the size of tabs, tabs now show ellipses if they are too long

--- a/src/components/ui/tab/Tab.module.css
+++ b/src/components/ui/tab/Tab.module.css
@@ -11,40 +11,65 @@
 
 .QuickTab {
     background-color: indigo;
-    width: auto;
     height: 32px;
+    cursor: pointer;
+    max-width: 128px;
+    min-width: 64px;
+    padding: 4px;
 }
 .QuickTab.Active {
     background-color: green;
 }
 .QuickTab > div {
-    height: 100%;
+    align-items: center;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    height: 100%;
+    justify-content: center;
 }
 
-.QuickTab.AddButton {
+.QuickTab.AddTab {
     background-color: lightsalmon;
     width: 64px;
     height: 32px;
 }
-.AddButton > div {
+.AddTab > div {
     height: 100%;
 }
-
-.TabBar button {
+.AddTab button {
     background-color: transparent;
-    color: white;
-    flex-grow: 1;
-    font-size: 11px;
     height: 100%;
+    width: 100%;
 }
 
-.QuickTab:hover button.Close {
+.TabBar p {
+    color: white;
+    font-size: 11px;
+    text-align: center;
+    width: 100%;
+}
+.TabBar p > span {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+    display: block;
+    overflow: hidden
+}
+
+.QuickTab:hover button.RemoveButton {
     display: block;
 }
-button.Close {
+button.RemoveButton {
+    background-color: transparent;
+    color: white;
     display: none;
+    position: absolute;
+    right: 0px;
+    top: 0px;
     width: 24px;
+    height: 100%;
+}
+
+.WithRemove p {
+    padding-right: 24px;
 }
